--- a/content/getting-started.mdx
+++ b/content/getting-started.mdx
@@ -39,20 +39,20 @@ Update the site metadata and social links in the **app/config.ts** file. These c
 
 ```
 export const metaData = {
-  baseUrl: "https://nextfolio-template.vercel.app", // Update with your site base URL
-  title: "Nextfolio", // Update with your site title
-  name: "Sirius", // Update with your name
-  ogImage: "/opengraph-image.png", // Update with your Open Graph image
+  baseUrl: "https://www.asthaspastas.com", // Update with your site base URL
+  title: 'Astha Bhandari', // Update with your site title
+  name: "Astha", // Update with your name
+  ogImage: "/profile.png", // Update with your Open Graph image
   description:
-    "A clean, fast, and lightweight portfolio template built with Next.js, Vercel, and Tailwind CSS for optimal performance.", // Update with your site description
+    "welcome to my blog.",
 };
 
 export const socialLinks = {
-  twitter: "https://x.com/1tssirius", // Update with your Twitter URL
-  github: "https://github.com/1msirius/Nextfolio", // Update with your GitHub URL
-  instagram: "https://www.instagram.com/", // Update with your Instagram URL
-  linkedin: "https://www.linkedin.com/", // Update with your LinkedIn URL
-  email: "mailto:example@gmail.com", // Update with your email address
+  twitter: "https://x.com/asthaspastas", // Update with your Twitter URL
+  github: "https://github.com/asthabhandari/astha-website", // Update with your GitHub URL
+  instagram: "https://www.instagram.com/asthaspastas", // Update with your Instagram URL
+  linkedin: "https://www.linkedin.com/in/astha26", // Update with your LinkedIn URL
+  email: "mailto:asthabhandari21@gmail.com", // Update with your email address
 };
 ```
 
